Phase Defaults Applied to all

--- a/sdk/package.json
+++ b/sdk/package.json
@@ -35,5 +35,8 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/cryptoistaken/approval"
+    },
+    "dependencies": {
+        "@phase.dev/phase-node": "^3.2.0"
     }
 }
