--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     ],
     "scripts": {
         "start": "cd bot && bun run start"
+    },
+    "dependencies": {
+        "@cryptoistaken/crion": "^2.1.0"
     }
 }
