Rewrite bot code with clean architecture and comprehensive documentation
- Rewrote index.js with proper documentation, clean structure, and improved logging
- Rewrote src/bot.js with better error handling and registration flow
- Rewrote src/db.js with added indexes and proper comments
- Updated package.json with proper metadata
- Complete README rewrite with:
  - Quick start guide for shared bot
  - Self-hosted Simple Mode deployment instructions
  - Multi-tenant Mode deployment instructions
  - API reference
  - Environment variables documentation
  - Project structure overview

--- a/bot/package.json
+++ b/bot/package.json
@@ -1,5 +1,7 @@
 {
-    "name": "approval-bot",
+    "name": "crion-bot",
+    "version": "1.0.0",
+    "description": "Telegram-based human-in-the-loop approval system for Phase.dev secrets",
     "type": "module",
     "scripts": {
         "dev": "bun --hot index.js",
@@ -7,5 +9,8 @@
     },
     "dependencies": {
         "telegraf": "^4.16.0"
+    },
+    "engines": {
+        "bun": ">=1.0.0"
     }
 }
